--- a/jdbcTest/.classpath
+++ b/jdbcTest/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="F:/C_Lib/ibatis/ojdbc11.jar">
+	<classpathentry kind="lib" path="C:/Users/dbstl/OneDrive/바탕 화면/C_Lib/ibatis/ojdbc11.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
